--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     background-color: rgb(141, 134, 214);
-    font-family: Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: rgb(43, 226, 67);
     margin: 20px;
     padding: 50px;
